# SDL_shooter

./: CMakeLists.txt  README.md  SDL_shooter-Linux
src/: Game.cpp  Game.h  Object.h  Scene.cpp  Scene.h  SceneTitle.cpp  SceneTitle.h  Scene_Main.cpp  Scene_Main.h  main.cpp
